      Patch by Mathias Panzenböck.
    * Amazon store: It is now possible to add items to your shopping cart using amarok:// URLs.
    * Amazon store: Use the context info applet to show further infos about a selected item.
    * New argument --debug-audio to enable Phonon debugging.
    * Amazon store: We now ship a utility to handle downloads from Amazon.

  CHANGES:
    * Configure Amarok dialog gets new Metadata tab to grab some weight from the
      Collection tab and to configure statistics synchronization.
    * APG now saves its presets each time it's run, to lessen preset loss if
      Amarok crashes. (BR 294743)
    * APG playlists no longer limited to 100 tracks. (BR 301829)
    * The confusing "Local Collection Backends" category of plugins was removed
      from the Configure dialog. All backends are enabled from now on.
    * Statistics of tracks outside of collections are only read/saved to file
      tags (if enabled) instead of being kept in the database.
    * Last.fm Skip button removed; Last.fm API no longer provides it. (BR 305576)
    * Optional liblastfm dependency raised to 1.0.0. (BR 302597)
    * Add composer button to wikipedia applet (BR 272982)
    * New optional dependency for Amazon downloads: clamz.

  BUGFIXES:
    * Better Last.fm scrobbling behaviour and error reporting due to rewrite,
      should fix long-standing problems. (BR 293320, BR 285820)
    * Update stream meta-data correctly even with phonon-gstreamer back-end. (BR 300189)
    * Fix available transcoding encoders detection with ffmpeg 1.0. (BR 309454)
    * Fix playback resuming with phonon-gstreamer; raise phonon-vlc dependency
      to at least 0.6.1 as a side-effect. (BR 290612)
    * Create collections even for SD/MMC/etc. cards on PCI-connected slots.
    * Fixed some incorrect logic in the PlaylistLength constraint, which was
      causing the APG to create playlists that were shorter than expected.
      (BR 293616)